Add Railway configuration for backend deployment

--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Backend API for CardExtract Pro",
   "main": "dist/server.js",
+  "packageManager": "pnpm@8.0.0",
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
@@ -35,4 +36,3 @@
     "@typescript-eslint/parser": "^6.13.0"
   }
 }
-
