Add build script that includes devDependencies for Render

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
+    "build:render": "npm install --include=dev && npm run build",
     "start": "node dist/server.js",
     "lint": "eslint src --ext .ts"
   },
